[tool.poetry]
name = "notes2notion"
version = "2.0.0"
description = "Import content from Apple Notes into Notion"
authors = ["jheddings <jheddings@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
applescript = "^2021.2.9"
notional = "^0.8.2"
click = "^8.1.7"
pydantic = "^1.10.16"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[tool.poetry.scripts]
notes2notion = "notes2notion.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
